--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,9 +2,10 @@ name: 'publish'
 
 # This will trigger the action on each push to the `release` branch.
 on:
-  push:
-    branches:
-      - release
+  create:
+    tags:
+      - 'v*'
+
 
 jobs:
   publish-tauri:
