--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build --config tauri.conf.prod.json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -16,8 +17,11 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
-    "@tauri-apps/api": "^1.5.3",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@tauri-apps/api": "^2.0.0-beta",
+    "@tauri-apps/plugin-sql": "^2.0.0-beta.3",
     "camelcase-keys": "^9.1.3",
+    "i18next": "^23.9.0",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,11 +30,11 @@
     "react-use": "^17.5.0",
     "recharts": "^2.12.0",
     "snakecase-keys": "^6.0.0",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql#v1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.9",
+    "@tauri-apps/cli": "^2.0.0-beta.17",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
