--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,18 +12,17 @@ rust-version = "1.60"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-beta.15", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-beta", features = [
-] }
+tauri = { version = "2.0.0-beta.19", features = [] }
 
 [dependencies.tauri-plugin-sql]
 git = "https://github.com/tauri-apps/plugins-workspace"
 branch = "v2"
-version = "2.0.0-beta"
+version = "2.0.0-beta.4"
 features = ["sqlite"]
 
 [features]
