--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/x-date-pickers": "^6.19.4",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tauri-apps/api": "^2.0.0-beta",
     "@tauri-apps/plugin-sql": "^2.0.0-beta.3",
     "camelcase-keys": "^9.1.3",
     "i18next": "^23.9.0",
     "luxon": "^3.4.4",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.0",
     "react-use": "^17.5.0",
     "recharts": "^2.12.0",
+    "redux": "^5.0.1",
     "snakecase-keys": "^6.0.0",
     "zod": "^3.22.4",
     "zod-i18n-map": "^2.27.0"
