--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.5.0",
     "recharts": "^2.12.0",
     "redux": "^5.0.1",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "snakecase-keys": "^6.0.0",
     "zod": "^3.22.4",
     "zod-i18n-map": "^2.27.0"
@@ -46,6 +50,7 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/testing-library__user-event": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
